Another refactoring for command processor