@@ -1,37 +1,38 @@
-package org.service.concept.db.postgres;
+package org.service.command.dml.postgres;
 
 import static org.junit.Assert.assertEquals;
-import static org.service.concept.db.postgres.Execute.NEW_LINE;
+import static org.service.command.dml.postgres.DMLCommand.NEW_LINE;
 
 import org.junit.Test;
-import org.service.concept.db.event.ConditionAnd;
-import org.service.concept.db.event.ConditionEqual;
-import org.service.concept.db.event.ConditionIn;
-import org.service.concept.db.event.ConditionLess;
-import org.service.concept.db.event.ConditionMore;
-import org.service.concept.db.event.ConditionNot;
-import org.service.concept.db.event.ConditionNull;
-import org.service.concept.db.event.ConditionOr;
-import org.service.concept.db.event.RequestCount;
+import org.service.command.dml.CountParams;
+import org.service.command.dml.postgres.Count;
+import org.service.command.dml.predicate.And;
+import org.service.command.dml.predicate.Equal;
+import org.service.command.dml.predicate.In;
+import org.service.command.dml.predicate.Less;
+import org.service.command.dml.predicate.More;
+import org.service.command.dml.predicate.Not;
+import org.service.command.dml.predicate.Null;
+import org.service.command.dml.predicate.Or;
 
-import com.google.common.collect.ImmutableList;
+import io.vavr.collection.List;
 
-public class ExecuteCount_UnitTest {
+public class Count_UnitTest {
 
     @Test
     public void test_buildSql_simple() {
         // Setup
-        ExecuteCount subject = new ExecuteCount();
+        Count       subject = new Count();
 
-        RequestCount request = new RequestCount("table", new ConditionEqual("col1", 22));
+        CountParams request = new CountParams("table", new Equal("col1", 22));
 
         // Execute
         String result = subject.buildSql(request);
 
         // Verify
         assertEquals("SELECT COUNT(*)" + NEW_LINE +
-                     "  FROM table" + NEW_LINE +
-                     " WHERE col1 = ?",
+                "  FROM table" + NEW_LINE +
+                " WHERE col1 = ?",
                 result);
 
     }
@@ -39,31 +40,31 @@ public class ExecuteCount_UnitTest {
     @Test
     public void test_buildSql_complex() {
         // Setup
-        ExecuteCount subject = new ExecuteCount();
+        Count       subject = new Count();
 
-        RequestCount request = new RequestCount(
+        CountParams request = new CountParams(
                 "table",
-                new ConditionNot(
-                        new ConditionAnd(ImmutableList.of(
-                                new ConditionEqual("col1", 22),
-                                new ConditionOr(ImmutableList.of(
-                                        new ConditionIn("col2", ImmutableList.of(1, 2, 3)),
-                                        new ConditionNot(new ConditionNull("col3")))),
-                                new ConditionLess("col4", 22),
-                                new ConditionNot(new ConditionMore("col5", 12.4))))));
+                new Not(
+                        new And(List.of(
+                                new Equal("col1", 22),
+                                new Or(List.of(
+                                        new In("col2", List.of(1, 2, 3)),
+                                        new Not(new Null("col3")))),
+                                new Less("col4", 22),
+                                new Not(new More("col5", 12.4))))));
 
         // Execute
         String result = subject.buildSql(request);
 
         // Verify
         assertEquals("SELECT COUNT(*)" + NEW_LINE +
-                     "  FROM table" + NEW_LINE +
-                     " WHERE " + NEW_LINE +
-                     "   NOT   ( col1 = ?" + NEW_LINE +
-                     "       AND  ( col2 IN (?, ?, ?)" + NEW_LINE +
-                     "            OR col3 IS NOT NULL)" + NEW_LINE +
-                     "       AND col4 < ?" + NEW_LINE +
-                     "       AND col5 <= ?)",
+                "  FROM table" + NEW_LINE +
+                " WHERE " + NEW_LINE +
+                "   NOT   ( col1 = ?" + NEW_LINE +
+                "       AND   ( col2 IN (?, ?, ?)" + NEW_LINE +
+                "            OR col3 IS NOT NULL)" + NEW_LINE +
+                "       AND col4 < ?" + NEW_LINE +
+                "       AND col5 <= ?)",
                 result);
 
     }
