@@ -1,35 +1,36 @@
-package org.service.concept.db.postgres;
+package org.service.command.dml.postgres;
 
 import static org.junit.Assert.assertEquals;
-import static org.service.concept.db.postgres.Execute.NEW_LINE;
+import static org.service.command.dml.postgres.DMLCommand.NEW_LINE;
 
 import org.junit.Test;
-import org.service.concept.db.event.ConditionAnd;
-import org.service.concept.db.event.ConditionEqual;
-import org.service.concept.db.event.ConditionIn;
-import org.service.concept.db.event.ConditionLess;
-import org.service.concept.db.event.ConditionMore;
-import org.service.concept.db.event.ConditionNot;
-import org.service.concept.db.event.ConditionNull;
-import org.service.concept.db.event.ConditionOr;
-import org.service.concept.db.event.Page;
-import org.service.concept.db.event.RequestSelect;
-import org.service.concept.db.event.Sorting;
+import org.service.command.dml.SelectParams;
+import org.service.command.dml.postgres.Select;
+import org.service.command.dml.predicate.And;
+import org.service.command.dml.predicate.Equal;
+import org.service.command.dml.predicate.In;
+import org.service.command.dml.predicate.Less;
+import org.service.command.dml.predicate.More;
+import org.service.command.dml.predicate.Not;
+import org.service.command.dml.predicate.Null;
+import org.service.command.dml.predicate.Or;
+import org.service.command.dml.predicate.OrderBy;
+import org.service.command.dml.predicate.Page;
 
-import com.google.common.collect.ImmutableList;
+import io.vavr.collection.List;
 
-public class ExecuteSelect_UnitTest {
+public class Select_UnitTest {
 
     @Test
     public void test_buildSql_simple() {
         // Setup
-        ExecuteSelect subject = new ExecuteSelect();
+        Select subject = new Select();
 
-        RequestSelect request = new RequestSelect(
+        SelectParams request = new SelectParams(
                 "table",
-                ImmutableList.of("col1", "col2", "col3"),
-                new ConditionEqual("col1", 22),
-                ImmutableList.of(new Sorting("col2", true)),
+                List.of("col1", "col2", "col3"),
+                new Equal("col1", 22),
+                List.of(new OrderBy("col2", true)),
                 new Page(1, 10));
 
         // Execute
@@ -37,13 +38,13 @@ public class ExecuteSelect_UnitTest {
 
         // Verify
         assertEquals("SELECT col1," + NEW_LINE +
-                     "       col2," + NEW_LINE +
-                     "       col3" + NEW_LINE +
-                     "  FROM table" + NEW_LINE +
-                     " WHERE col1 = ?" + NEW_LINE +
-                     " ORDER BY col2 ASC" + NEW_LINE +
-                     " LIMIT 10" + NEW_LINE +
-                     "OFFSET 1",
+                "       col2," + NEW_LINE +
+                "       col3" + NEW_LINE +
+                "  FROM table" + NEW_LINE +
+                " WHERE col1 = ?" + NEW_LINE +
+                " ORDER BY col2 ASC" + NEW_LINE +
+                " LIMIT 10" + NEW_LINE +
+                "OFFSET 1",
                 result);
 
     }
@@ -51,23 +52,23 @@ public class ExecuteSelect_UnitTest {
     @Test
     public void test_buildSql_complex() {
         // Setup
-        ExecuteSelect subject = new ExecuteSelect();
+        Select subject = new Select();
 
-        RequestSelect request = new RequestSelect(
+        SelectParams request = new SelectParams(
                 "table",
-                ImmutableList.of("col1", "col2", "col3"),
-                new ConditionNot(
-                        new ConditionAnd(ImmutableList.of(
-                                new ConditionEqual("col1", 22),
-                                new ConditionOr(ImmutableList.of(
-                                        new ConditionIn("col2", ImmutableList.of(1, 2, 3)),
-                                        new ConditionNot(new ConditionNull("col3")))),
-                                new ConditionLess("col4", 22),
-                                new ConditionNot(new ConditionMore("col5", 12.4))))),
-                ImmutableList.of(
-                        new Sorting("col1", true),
-                        new Sorting("col4", false),
-                        new Sorting("col5", true)),
+                List.of("col1", "col2", "col3"),
+                new Not(
+                        new And(List.of(
+                                new Equal("col1", 22),
+                                new Or(List.of(
+                                        new In("col2", List.of(1, 2, 3)),
+                                        new Not(new Null("col3")))),
+                                new Less("col4", 22),
+                                new Not(new More("col5", 12.4))))),
+                List.of(
+                        new OrderBy("col1", true),
+                        new OrderBy("col4", false),
+                        new OrderBy("col5", true)),
                 new Page(10, 100));
 
         // Execute
@@ -75,20 +76,20 @@ public class ExecuteSelect_UnitTest {
 
         // Verify
         assertEquals("SELECT col1," + NEW_LINE +
-                     "       col2," + NEW_LINE +
-                     "       col3" + NEW_LINE +
-                     "  FROM table" + NEW_LINE +
-                     " WHERE " + NEW_LINE +
-                     "   NOT   ( col1 = ?" + NEW_LINE +
-                     "       AND   ( col2 IN (?, ?, ?)" + NEW_LINE +
-                     "            OR col3 IS NOT NULL)" + NEW_LINE +
-                     "       AND col4 < ?" + NEW_LINE +
-                     "       AND col5 <= ?)" + NEW_LINE +
-                     " ORDER BY col1 ASC," + NEW_LINE +
-                     "          col4 DESC," + NEW_LINE +
-                     "          col5 ASC" + NEW_LINE +
-                     " LIMIT 100" + NEW_LINE +
-                     "OFFSET 10",
+                "       col2," + NEW_LINE +
+                "       col3" + NEW_LINE +
+                "  FROM table" + NEW_LINE +
+                " WHERE " + NEW_LINE +
+                "   NOT   ( col1 = ?" + NEW_LINE +
+                "       AND   ( col2 IN (?, ?, ?)" + NEW_LINE +
+                "            OR col3 IS NOT NULL)" + NEW_LINE +
+                "       AND col4 < ?" + NEW_LINE +
+                "       AND col5 <= ?)" + NEW_LINE +
+                " ORDER BY col1 ASC," + NEW_LINE +
+                "          col4 DESC," + NEW_LINE +
+                "          col5 ASC" + NEW_LINE +
+                " LIMIT 100" + NEW_LINE +
+                "OFFSET 10",
                 result);
 
     }
